[package]
name = "lordserial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
desert = "2.0.0"
anyhow = "1.0.0"
packet = {path = "pkg/packet"}
parser = {path = "pkg/parser"}
data = {path = "pkg/data"}
error = {path = "pkg/error"}
serialport="4.0.0"


[workspace]

members = [
    "pkg/data",
    "pkg/error",
    "pkg/packet",
    "pkg/parser",
    "pkg/derive_field"
]