[package]
name = "data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = {path = "../packet"}
derive_field = {path = "../derive_field"}
anyhow = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
